[package]
name = "bevy_advanced_input"
version = "0.3.0"
authors = ["sadpython"]
edition = "2021"
exclude = [".vscode/**"]
description = "Advanced axis and keyset input in Bevy"
license = "MIT"
repository = "https://github.com/existentially/bevy_advanced_input"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6", features = ["serialize"], default-features = true }
serde = { version = "1", features = ["derive"] }
ron = "0.7"

[[example]]
name = "common"
path = "examples/common.rs"